--- a/CC2/VSProjects/AlfaCAD32-master/AlfaCAD32.vcxproj
+++ b/CC2/VSProjects/AlfaCAD32-master/AlfaCAD32.vcxproj
@@ -4255,6 +4255,7 @@
     <ClCompile Include="..\..\..\CC2\Source\woods_US.c" />
     <ClCompile Include="..\..\..\CC2\Source\Z_section_US_si.c" />
     <ClCompile Include="..\..\..\glyph-keeper32\src\glyph.c" />
+    <ClCompile Include="..\..\Source\o_section_block.c" />
     <ClCompile Include="..\..\Source\o_slider.c" />
   </ItemGroup>
   <ItemGroup>
