--- a/CC2/VSProjects/AlfaCAD64-master/AlfaCAD.vcxproj
+++ b/CC2/VSProjects/AlfaCAD64-master/AlfaCAD.vcxproj
@@ -71,7 +71,7 @@
     <SccLocalPath />
     <Keyword>MFCProj</Keyword>
     <ProjectGuid>{A526BEBE-1DCA-537D-F8B2-EB678EF97883}</ProjectGuid>
-    <WindowsTargetPlatformVersion>10.0.22621.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
     <ProjectName>AlfaCAD</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -799,8 +799,8 @@
       <SuppressStartupBanner>true</SuppressStartupBanner>
       <CompileAsManaged>false</CompileAsManaged>
       <BasicRuntimeChecks>Default</BasicRuntimeChecks>
+      <LanguageStandard_C>Default</LanguageStandard_C>
       <Optimization>Disabled</Optimization>
-      <LanguageStandard_C>stdc11</LanguageStandard_C>
     </ClCompile>
     <Link>
       <OutputFile>x64/Release/AlfaCAD4Win64.exe</OutputFile>
@@ -811,6 +811,7 @@
       <AdditionalDependencies>%(AdditionalDependencies)</AdditionalDependencies>
       <IgnoreSpecificDefaultLibraries>
       </IgnoreSpecificDefaultLibraries>
+      <ShowProgress>NotSet</ShowProgress>
     </Link>
     <Midl>
       <PreprocessorDefinitions>NDEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
@@ -5323,6 +5324,7 @@
     <ClCompile Include="..\..\..\CC2\Source\woods_US.c" />
     <ClCompile Include="..\..\..\CC2\Source\Z_section_US_si.c" />
     <ClCompile Include="..\..\..\glyph-keeper64\src\glyph.c" />
+    <ClCompile Include="..\..\Source\o_section_block.c" />
     <ClCompile Include="..\..\Source\o_slider.c" />
   </ItemGroup>
   <ItemGroup>
